--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -216,7 +216,7 @@
 
 <body>
     <div class="navbar">
-        <h1>DevOps Shack</h1>
+        <h1>Mathew's Digital Diary</h1>
         <div class="links">
             <a href="https://www.youtube.com/@devopsshack/videos" target="_blank">YouTube</a>
             <a href="https://www.instagram.com/devopsshack/" target="_blank">Instagram</a>
